--- a/personMap.html
+++ b/personMap.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="css/checkbox-11.css">
     <link rel="stylesheet" href="css/right.css">
     <link rel="stylesheet" href="css/cns.css">
+    <link rel="stylesheet" href="css/btn-map.css">
     <style type="text/css">
         ul.imglist{ margin:0 auto;overflow:hidden}
         ul.imglist li{ float:left; padding:4px 8px; width:220px;list-style-type:none;}
@@ -101,8 +102,8 @@
                 <li><a href="index.html">主页</a></li>
                 <li><a href="listPhotos.html">数据查询</a></li>
                 <li><a href="upload.html">上传数据</a></li>
-                <li><a href="search.html">车辆检索</a></li>
-                <li class="fh5co-active"><a href="person.html">行人检索</a></li>
+                <li><a href="vehicle.html">车辆检索</a></li>
+                <li class="fh5co-active"><a href="personMap.html">行人检索</a></li>
                 <li><a href="posture.html">姿态检索</a></li>
             </ul>
         </nav>
