--- a/listPhotos.html
+++ b/listPhotos.html
@@ -64,8 +64,8 @@
 					<li><a href="index.html">主页</a></li>
 					<li class="fh5co-active"><a href="listPhotos.html">数据查询</a></li>
 					<li><a href="upload.html">上传数据</a></li>
-					<li><a href="search.html">车辆检索</a></li>
-					<li><a href="person.html">行人检索</a></li>
+					<li><a href="vehicle.html">车辆检索</a></li>
+					<li><a href="personMap.html">行人检索</a></li>
 					<li><a href="posture.html">姿态检索</a></li>
 				</ul>
 			</nav>
