--- a/vehicle.html
+++ b/vehicle.html
@@ -108,6 +108,13 @@
 			</ul>
 		</nav>
 
+		<div class="fh5co-footer" style="margin-bottom: 50px">
+			<h1 id="fh5co-boyu-logo">
+				<a href="index.html">
+					<img src="images/boyu.png" style="width:100px;height: 100px">
+				</a>
+			</h1>
+		</div>
 
 		<div class="fh5co-footer">
 			<p>Copyright PKU</p>
